/*
 * Copyright 2019, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.gradle.compiler.lookup.enrichments;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.gradle.compiler.lookup.enrichments";
option java_outer_classname = "TestEnrichmentsProto";
option java_multiple_files = true;


// Messages in this file are test enrichments.
//
// See EnrichmentLookupPluginTest
//
message FqnEnrichment {
    option (enrichment_for) = "spine.gradle.compiler.lookup.enrichments.ProjectCreated";

    string project_name = 1 [(by) = "project_id"];
}

message WildcardEnrichment {
    option (enrichment_for) = "spine.gradle.compiler.lookup.enrichments.*";

    string project_name = 1 [(by) = "project_id"];
}

message MixedSyntaxEnrichment {
    option (enrichment_for) = "spine.gradle.compiler.lookup.enrichments.inner.*,"
                              "spine.gradle.compiler.lookup.enrichments.ProjectDeleted";

    string project_name = 1 [(by) = "project_id | parent_project_id"];
}
